k8s/tinyauth/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth-ingressroute
  namespace: tinyauth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tinyauth.home.coredev.uk`)
      kind: Rule
      services:
        - name: tinyauth-tinyauth
          port: 80
  tls:
    secretName: tinyauth-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth-redirect
  namespace: tinyauth
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tinyauth.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: tinyauth-tinyauth
          port: 80
